<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.1</version>
        <relativePath/>
    </parent>

    <groupId>com.mouhin.family</groupId>
    <artifactId>family-tree</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Family Tree</name>
    <description>族谱管理系统</description>

    <modules>
        <module>family-tree-common</module>
        <module>family-tree-domain</module>
        <module>family-tree-infrastructure</module>
        <module>family-tree-application</module>
        <module>family-tree-web</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <mybatis-plus.version>3.5.9</mybatis-plus.version>
        <family-tree.version>1.0.0-SNAPSHOT</family-tree.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- 内部模块 -->
            <dependency>
                <groupId>com.mouhin.family</groupId>
                <artifactId>family-tree-common</artifactId>
                <version>${family-tree.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mouhin.family</groupId>
                <artifactId>family-tree-domain</artifactId>
                <version>${family-tree.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mouhin.family</groupId>
                <artifactId>family-tree-infrastructure</artifactId>
                <version>${family-tree.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mouhin.family</groupId>
                <artifactId>family-tree-application</artifactId>
                <version>${family-tree.version}</version>
            </dependency>

            <!-- MyBatis-Plus -->
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
